--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
     </header>
     <section>
 
-        <form action="validar.php" method="post">
+        <form action="validar.html.php" method="post">
     <div class="cuadros">
         Usuario<input type="text" name="usuario" id="usuario"><br>
         Contraseña<input type="password" name="contra" id="contrasena" ><br>
